F4 and randomised algorithms

--- a/docs/dissertation/el398_dissertation.tex
+++ b/docs/dissertation/el398_dissertation.tex
@@ -355,7 +355,7 @@ Below is a list of requirements for both deliverables, prioritised using \emph{M
 
 \subsection{Technical choices}
 
-The steganographic application requires modifying MPEG video files, which in turn requires parsing the format of a file, modifying motion vector values, and repackaging the data back into a playable video. Developing a codec does not relate to steganography and is potentially error prone, so I leverage an existing set of codecs---\texttt{FFmpeg}\footnote{\url{https://www.ffmpeg.org/}}---to achieve this. As codecs are typically written in C or C++, it is a natural choice for this task to and makes the integration easier.
+The steganographic application requires modifying MPEG video files, which in turn requires parsing the format of a file, modifying motion vector values, and repackaging the data back into a playable video. Developing a codec does not relate to steganography and is potentially error-prone, so I leverage an existing set of codecs---\texttt{FFmpeg}\footnote{\url{https://www.ffmpeg.org/}}---to achieve this. As codecs are typically written in C or C++, it is a natural choice for this task to and makes the integration easier.
 
 Performing encryption prior to embedding requires using a cryptography library. I chose \emph{Crypto++}, a popular C++ cryptography library.
 
@@ -397,11 +397,11 @@ This chapter summarised relevant theoretical and practical background necessary 
 
 \subsection{Integration with FFmpeg}
 
-Finding a suitable way of integrating with FFmpeg was one of the biggest challenges that the project faced at the beginning of development. FFmpeg is split into several libraries, each for a dedicated purpose, such as stream multiplexing, resampling and supporting I/O devices. The most suitable library to integrate the project with was \texttt{libavcodec} which implements various audio and video codecs. I decided to focus on H.264, as it is the most popular codec online; FFmpeg offloads it to a separate library --- \texttt{libx264}. The \texttt{libavcodec} library exposes an API to run the codecs it implements, but further investigation showed that it is not possible to manipulate motion vectors through it. Therefore the next step was to modify the library to either introduce an additional API or call steganographic routines directly.
+Finding a suitable way of integrating with FFmpeg was one of the biggest challenges that the project faced at the beginning of development. FFmpeg is split into several libraries, each for a dedicated purpose, such as stream multiplexing, resampling and supporting I/O devices. The most suitable library to integrate the project with was \texttt{libavcodec} which implements various audio and video codecs. I decided to focus on H.264, as it is the most popular codec online; FFmpeg offloads it to a separate library --- \texttt{libx264}. The \texttt{libavcodec} library exposes an API to run the codecs it implements, but further investigation showed that it is not possible to manipulate motion vectors through it. Therefore, the next step was to modify the library to either introduce an additional API or call steganographic routines directly.
 
-Initially, I was looking for a point in the macroblock search phase where motion vectors would already be available, but the prediction error would have not been computed yet. This would allow modifying MVs without any visual footprint because prediction error would have brought the pixels to their required values regardless of the motion vector's value. However, since both FFmpeg and \texttt{libx264} are projects with complex data flow, written in C with high performance in mind, analysing them has been more difficult than initially anticipated. As a result of this, the project got delayed by 4 weeks with respect to the original timeline, so the following measures have been taken to quickly resolve this obstacle:
+Initially, I was looking for a point in the macroblock search phase where motion vectors would already be available, but the prediction error would not have been computed yet. This would allow modifying MVs without any visual footprint because prediction error would have brought the pixels to their required values regardless of the motion vector's value. However, since both FFmpeg and \texttt{libx264} are projects with a complex data flow, written in C with high performance in mind, analysing them has been more difficult than initially anticipated. As a result of this, the project got delayed by 4 weeks with respect to the original timeline, so the following measures have been taken to quickly resolve this obstacle:
 \begin{itemize}
-\item Choosing the codec that's fully contained within \texttt{libavcodec}, so that \texttt{libx264} does not have to be used at all. I chose MPEG-4 Part 2 (xvid), H.264's popular predecessor.
+\item Choosing the codec that's fully contained within \texttt{libavcodec}, so that \texttt{libx264} does not have to be used at all. I chose MPEG-4 Part 2 (\texttt{xvid}), H.264's popular predecessor.
 \item Focus on modifying motion vectors, because it is essential to the project. Macroblock search is contained deep within the encoding pipeline, which makes modifying it less approachable. Instead, I have been able to modify motion vectors before they are written to the output file.
 \end{itemize}
 
@@ -421,9 +421,9 @@ To achieve a modular design and decouple from FFmpeg, steganographic algorithms 
 
 \subsubsection{Class hierarchy}
 
-The class hierarchy of embedding algorithms is presented in Figure \ref{fig:movest_alg_class_diag}. \texttt{Algorithm} is the base class for all embedding algorithms and contains common functionality, such as setting up the payload file or operating on every motion vector of suitable type in turn. Most algorithms, however, extend \texttt{HideSeek} to benefit from the following more specific functionality:
+The class hierarchy of embedding algorithms is presented in Figure \ref{fig:movest_alg_class_diag}. \texttt{Algorithm} is the base class for all embedding algorithms and contains common functionality, such as setting up the payload file or operating on every motion vector of a suitable type in turn. Most algorithms, however, extend \texttt{HideSeek} to benefit from the following more specific functionality:
 \begin{itemize}
-\item Operating on per-component basis. Motion vectors are stored as $x$ and $y$ components and many algorithms treat them independently. (\texttt{RandomisedHideSeek, OutGuess1})
+\item Operating on a per-component basis. Motion vectors are stored as $x$ and $y$ components and many algorithms treat them independently. (\texttt{RandomisedHideSeek, OutGuess1})
 \item Sequential data fetching and stopping criteria. Some algorithms read and embed payload bits sequentially and require knowing when to stop the embedding process. (\texttt{XuAlg, MVSteg})
 \item Both of above. (\texttt{MSteg, F3, F4})
 \end{itemize}
@@ -437,13 +437,13 @@ The class hierarchy of embedding algorithms is presented in Figure \ref{fig:move
 A singleton instance of an embedding algorithm is kept active after initialisation. FFmpeg feeds motion vector data into the algorithm by calling C API methods \texttt{movest\_encode/decode}.  
 
 \subsubsection{Encryption}
-Encrypting the payload hides the structure of the data by making it indistinguishable from random noise, also making it hard to detect in already-noisy regions. An additional benefit of the encryption is that the embedded data will remain unreadable by an adversary even if steganography was broken. \texttt{movestlib} achieves this by implementing a file-like object for accessing the payload, and encrypting or decrypting the data on the fly (\texttt{MOVEST\_ENCRYPTION} flag). I made the choice in favour of well-established AES encryption in counter (CTR) mode with a 256-bit key. Key itself and the initialisation vector are derived from the user-supplied password by performing key stretching using an industry-standard PBKDF2-HMAC-SHA1 key derivation function. Manually implementing cryptographic primitives is error-phone and can lead to major security flaws, so the Crypto++ library is used to provide them. 
+Encrypting the payload hides the structure of the data by making it indistinguishable from random noise, also making it hard to detect in already-noisy regions. An additional benefit of the encryption is that the embedded data will remain unreadable by an adversary even if steganography was broken. \texttt{movestlib} achieves this by implementing a file-like object for accessing the payload, and encrypting or decrypting the data on the fly (\texttt{MOVEST\_ENCRYPTION} flag). I made the choice in favour of well-established AES encryption in counter (CTR) mode with a 256-bit key. The key itself and the initialisation vector are derived from the user-supplied password by performing key stretching using an industry-standard PBKDF2-HMAC-SHA1 key derivation function. Manually implementing cryptographic primitives is error-prone and can lead to major security flaws, so the Crypto++ library is used to provide them. 
 
 \subsection{Encoder and decoder applications}
 \label{enc-dec-bin}
 The project provides video-processing applications for embedding and recovering the payload from a video file. The two are largely based on FFmpeg examples for transcoding (\texttt{transcoding.c}) and motion vector extraction (\texttt{extract\_mvs.c}), which already contain the code to trigger code paths in FFmpeg that I have modified.
 
-Before letting FFmpeg code to process the video, applications parse user's input to initialise \texttt{movestlib} with required data, such as the embedding algorithm (\texttt{movest\_init\_algorithm}), the payload file path and the encryption password (\texttt{movest\_init\_encoder/decoder}). FFmpeg treats sequences of frames as streams, which means that frames are written to the output file one after another and it is not possible to access a previous or a future frame during the embedding process. Algorithms that require estimating certain parameters, for example, the embedding capacity of a video prior to modifying it, therefore require all embedding decisions to be made in advance. To achieve this, the encoder performs a dry run (\texttt{MOVEST\_DUMMY\_PASS} flag) for data collection --- motion vectors themselves are not modified in this case.
+Before letting FFmpeg code to process the video, applications parse user's input to initialise \texttt{movestlib} with required data, such as the embedding algorithm (\texttt{movest\_init\_algorithm}), the payload file path and the encryption password (\texttt{movest\_init\_encoder/decoder}). FFmpeg treats sequences of frames as streams, which means that frames are written to the output file one after another and it is not possible to access a previous or a future frame during the embedding process. Algorithms that require estimating certain parameters, for example, the embedding capacity of a video prior to modifying it, have to make all embedding decisions in advance. To enable this, the encoder performs a dry run (\texttt{MOVEST\_DUMMY\_PASS} flag) for data collection --- motion vectors themselves are not modified in this case.
 
 \textbf{sample help?}
 
@@ -452,6 +452,7 @@ Before letting FFmpeg code to process the video, applications parse user's input
 Steganalysis techniques for this project were implemented in Matlab, which allowed to greatly simplify the implementation by leveraging existing data processing, plotting and statistical routines. All techniques will be shown in action against implemented algorithms.
 
 \subsection{Motion vector import}
+\label{mv-import}
 
 Decoder application can be set up to use a special algorithm \texttt{DumpMvs} which will output motion vector components using an easy-to-parse text format. Matlab can later import this data as 3D matrices (\texttt{loadmvs.m}), where element at $(i, j, k)$ refers to a macroblock at $i$-th row, $j$-th column of the $k$-th frame. 
 
@@ -490,7 +491,7 @@ We can now devise a statistical procedure (\texttt{chiSquareAttack.m}) which can
 
 Let $X_k$ and $Y_k$ be the number of times values $2k$ and $2k+1$ occur as motion vector values respectively. Let us also consider another variable $Z_k = \frac{X_k + Y_k}{2}$ --- the average of the two. If the video contains the payload, $X_k$ and $Y_k$ should be almost equal, or, in other words, be distributed as $Z_k$. To prevent influence from the noise in data, pairs that have $Z_k < 8$ are considered to be under-represented and are neglected in further analysis (\emph{minimum frequency condition}). \textbf{address the difference from the paper?}
 
-We can use the \emph{$\chi^2$ (chi-squared) test} to check the hypothesis that there is no significant difference between $X_k$ and $Z_k$ (null hypothesis). Case for $Y_k$ is symmetric and not considered further. The test tells us we can compute the quantity
+We can use the \emph{$\chi^2$ (chi-square) test} to check the hypothesis that there is no significant difference between $X_k$ and $Z_k$ (null hypothesis). The case for $Y_k$ is symmetric and not considered further. The test tells us we can compute the quantity
 
 $$ \chi^2_{n-1} \approx \sum^{n}_{k=0} \frac{(\text{observed}_k - \text{expected}_k)^2}{\text{expected}_k}= \sum^{255}_{k=-255} \frac{(X_k - Z_k)^2}{Z_k} $$ 
 
@@ -521,7 +522,7 @@ The hypothesis suggests the following approach of distinguishing between a stego
 \item Non-stego videos will have a higher frequency of small differences and a lower frequency of larger differences.
 \end{itemize}
 
-Therefore we can build a classifier which will try to learn the partition between two classes. I decided to use a Support Vector Machine (SVM) with linear kernel (as Figure \ref{fig:movest-reversion-sketch} suggests), trained using Matlab's \texttt{fitcsvm} routine.
+Therefore, we can build a classifier which will try to learn the partition between two classes. I decided to use a Support Vector Machine (SVM) with linear kernel (as Figure \ref{fig:movest-reversion-sketch} suggests), trained using Matlab's \texttt{fitcsvm} routine.
 
 \section{Embedding algorithms}
 \label{emb-alg}
@@ -532,7 +533,7 @@ The project implements 7 embedding algorithms which are presented in this sectio
 
 \emph{Hide \& Seek}~\cite{bateman} is the algorithm that was alluded to in the previous section. The algorithm embeds payload bits into both $x$ and $y$ components of each motion vector by setting their LSB to that of the payload. This achieves the maximal capacity for this kind of embedding --- 2 bits per macroblock. However, it is also susceptible to all attacks described in the previous section. 
 
-Since data is embedded into all possible macroblocks, visual analysis allows easily spotting it in an non-noisy region. Figure \ref{fig:visual-analysis-example} shows two 2D plots of the same frame: one without the embedding and one with data embedded at about 45\% of capacity. Unusual noise in the first half of the frame exposes the embedding.  
+Since data is embedded into all possible macroblocks, the visual analysis allows easily spotting it in a non-noisy region. Figure \ref{fig:visual-analysis-example} shows two 2D plots of the same frame: one without the embedding and one with data embedded at about 45\% of capacity. Unusual noise in the first half of the frame exposes the embedding.  
 
 \begin{figure}[tbh]
 \centerline{
@@ -549,6 +550,7 @@ Since data is embedded into all possible macroblocks, visual analysis allows eas
 \end{figure}
 
 \subsection{MSteg}
+\label{msteg}
 
 \emph{MSteg} is my straightforward adaptation of the \emph{JSteg} algorithm~\cite{bateman}, which was initially developed for embedding into JPEG DCT coefficients. The algorithm operates in the same way as Hide \& Seek, but addresses the visual detection problem by not embedding into ``still'' regions, where noise would be easily detectable. From the implementation perspective, it avoids embedding bits into 0-valued $x$ and $y$ components. Components with value 1 are also avoided, since embedding bit 0 would turn them into zeros, making decoding ambiguous.
 
@@ -599,35 +601,78 @@ Another algorithm adapted from image steganography is \emph{F3}~\cite{f5}. F3 im
         \EndIf
     \EndIf
     
-    \Return $mv_C \neq 0$
+    \State \Return $mv_C \neq 0$
 \EndIf
 \EndProcedure
 \end{algorithmic}
 \end{algorithm}
 
-Procedure \textsc{F3-Embed} operates on both $x$ and $y$ components ($mv_C$) of each motion vector in turn and reports whether embedding has been successful, \emph{i.e.} $mv_C$ is a non-zero value. If so, decoder will be able to use it, and if $mv_C$ was or has become zero, the same bit is re-embedded into the subsequent component. Extraction procedure simply reads off LSBs to reconstruct the data.
+Procedure \textsc{F3-Embed} operates on both $x$ and $y$ components ($mv_C$) of each motion vector in turn and reports whether embedding has been successful, \emph{i.e.} $mv_C$ is a non-zero value. If so, the decoder will be able to use it, and if $mv_C$ was or has become zero, the same bit is re-embedded into a subsequent component. Extraction procedure simply reads off LSBs to reconstruct the data.
 
-\begin{wrapfigure}{R}{5.5cm}
-\includegraphics[scale=0.75]{img/f3-hist.eps}
+\begin{wrapfigure}[15]{R}{6cm}
+\vspace{-15pt}
+\centering
+\includegraphics[width=5.5cm]{img/f3-hist.eps}
 \caption{Part of a histogram of motion vectors with F3 embedding. Note the unusually higher peaks corresponding to even numbers.}
 \label{fig:f3-hist}
 \end{wrapfigure}
 
-This leads to an interesting effect called \emph{shrinkage}. Whenever we try to embed a zero bit (\emph{steganographic zero}) into $mv_C = -1$ or $mv_C = 1$, the value of $mv_C$ will become 0, so the zero bit will have to be re-embedded again. As a result of this, F3 will embed more steganographic zeroes than ones. 
+This leads to an interesting effect called \emph{shrinkage}. Whenever we try to embed a zero bit (\emph{steganographic zero}) into $mv_C = -1$ or $mv_C = 1$, the value of $mv_C$ will become 0, so the zero bit will have to be re-embedded again. It means that F3 will embed more steganographic zeroes than ones. 
 
-This is the main weakness of the algorithm. Typical encrypted payload has the same number of steganographic zeroes and ones, but F3 embedding will embed more zeros and hence make values with LSB 0 more common (Figure \ref{fig:f3-hist}). However, the embedding is not be vulnerable if steganographic ones are more common in the payload, so shrinkage effect balances out the number of ones and zeroes embedded.  
+This is the main weakness of the algorithm. Typical encrypted payload has the same number of steganographic zeroes and ones, but since F3 embedding will embed more zeros, values with LSB 0 will be more common (Figure \ref{fig:f3-hist}). However, the embedding is not vulnerable if steganographic ones are more common in the payload, so the shrinkage effect balances out the number of ones and zeroes embedded.  
 
 \subsection{F4}
 
-How it avoids histogram attack?
+F4~\cite{f5} eliminates the weakness of F3 by using a different strategy for embedding into negative values of $mv_C$. Just like in F3, $mv_C$ is changed (if required) by decrementing its absolute value. Now when $mv_C$ is positive, the algorithm ensures its LSB matches that of the payload (just like F3), but when $mv_C$ is negative, algorithm ensures its LSB \emph{does not} match that of the payload. This mapping is visualised in Figure \ref{fig:f4-mapping} and the pseudocode is listed in Algorithm \ref{alg:f4-embed}.
 
-\subsection{Randomised Hide-n-Seek}
+\begin{algorithm}
+\caption{Embedding procedure for \emph{F4}.}
+\label{alg:f4-embed}
+\begin{algorithmic}
+\Procedure {F4-Embed}{$mv_C$, $payload_i$}
+\If {$mv_C > 0$ \textbf{and} $\textit{LSB}(mv_C) \neq payload_i$}
+    \State $mv_C \gets mv_C - 1$ \Comment {Decrease the absolute value of $mv_C$}
+\EndIf
+\If {$mv_C < 0$ \textbf{and} $\textit{LSB}(mv_C) = payload_i$}
+	\State $mv_C \gets mv_C + 1$ \Comment {Decrease the absolute value of $mv_C$}
+\EndIf
 
-Explain upsides of randomised embedding. Impl issues, increased bandwidth, mention ECC. 
+\State \Return $mv_C \neq 0$
+\EndProcedure
+\end{algorithmic}
+\end{algorithm}
+
+\begin{figure}[tbh]
+\centering
+\resizebox{0.75\textwidth}{!}{\input{img/movest-f4-mapping.tex}}
+\caption{F4's value mapping depending on the payload bit.}
+\label{fig:f4-mapping}
+\end{figure}
+
+As we see from Figure \ref{fig:f4-mapping}, shrinkage is no longer exclusively triggered by embedding a steganographic zero. Now it can occur when a steganographic zero is embedded into value 1 or when a steganographic one is embedded into value -1. Assuming both cases occur the same number of times, we can deduce that F4 is not biased towards embedding more zeroes or ones and, therefore, is not vulnerable to the previous attack. Detectability of this method using the reversion technique is discussed in Evaluation chapter.
+
+\subsection{Randomised Hide \& Seek}
+
+All of the previous algorithms share a common property: they embed the payload densely in the beginning of a video file, leaving the rest unmodified. We can achieve better undetectability if we spread a small payload across the entire file, making changes less noticeable. 
+
+\emph{Randomised Hide \& Seek}~\cite{bateman} is a modification of Hide \& Seek algorithm, which uses a PRNG to scatter payload bits uniformly across all motion vector components in a file. A simple way to implement this is choosing an MV component for every payload bit at random, navigating to the chosen frame and embedding data into the chosen component. However, as mentioned previously, FFmpeg's stream-oriented nature makes it impossible to switch between frames during the embedding. To work around this problem, I chose to build a map which assigns every payload bit to a particular (unique) motion vector component prior to embedding. This requires knowing the maximum capacity, which is obtained by performing a ``dry run'' beforehand. 
+
+When I was adapting this algorithm to motion vector steganography, commitment to use a particular macroblock's motion vector caused an interesting implementation issue. As mentioned in \ref{mv-import}, FFmpeg may choose to omit some macroblocks for space saving purposes, marking them as ``skipped'', which means that decoder should infer the motion from its neighbouring blocks~\cite{tourapis2004direct}. The issue arose from the fact that changing motion vectors in one P-frame indirectly affects which macroblocks will be ``skipped'' in the following frame. Therefore, the macroblock, that the algorithm has committed to beforehand, may vanish as data gets embedded. I considered three options to mitigate this issue:
+\begin{itemize}
+\item Further analyse FFmpeg to be able to reliably predict when ``vanishing'' happens. This, however, would imply spending a significant amount of time on a side issue.
+\item Dynamically rebuild the map as data gets embedded. This is a reasonable solution, but will make the algorithm significantly more complex.
+\item Guess the missing bits and use an error correcting code. This is a more elegant solution, which will also add some robustness against tampering. However, it will also increase the payload size due to inclusion of correction bits.
+\end{itemize}
+
+I went with the third option. Measurements showed that bit errors occur every 400--700 bytes. I chose the widely-used Reed-Solomon error correcting code, implemented by the \texttt{rscode} library, which operates at a byte-level granularity. My default configuration generously specifies 16 error correction (parity) bytes per 239 bytes of data\footnote{The library limits the size of a data block  plus a number of parity bytes to 255.}, but it can be adjusted if required. This allows correcting up to any 8 errors in the data.  
+
+Extracting the data using this algorithm requires the receiving party's PRNG to output the same sequence of values as the sender's. This is achieved by seeding both sender's and receiver's PRNGs to the same value, derived from the user-specified encryption password (in a same way as the encryption key). The receiving party also has to know the embedding capacity of a video and the embedded file size, but these can be pre-agreed.
+
+For small payload sizes, the algorithm does not produce a noticeable effect on the histogram, making many previous attacks ineffective. The footprint is further evaluated in the following chapter.   
 
 \subsection{Outguess 0.1}
 
-Similarly avoids 0s and 1s as most detectable ones. Current attack is JPEG specific?
+\emph{Outguess 0.1}~\cite{bateman} is essentially the same algorithm as Randomised Hide \& Seek, but it addresses the issue of embedding into ``still'' regions, by choosing not to embed into components with value 0 or 1. This is to avoid the visual analysis attack, which we previously looked at in MSteg design (Section \ref{msteg}).
 
 \subsection{Xu's Algorithm}
 \label{xu-alg}
