--- a/docs/dissertation/refs.bib
+++ b/docs/dissertation/refs.bib
@@ -159,3 +159,12 @@
   year={1999},
   organization={Springer}
 }
+
+@inproceedings{tourapis2004direct,
+  title={Direct macroblock coding for predictive (P) pictures in the H. 264 standard},
+  author={Tourapis, Alexis M and Wu, Feng and Li, Shipeng},
+  booktitle={Electronic Imaging 2004},
+  pages={364--371},
+  year={2004},
+  organization={International Society for Optics and Photonics}
+}
