--- a/docs/dissertation/refs.bib
+++ b/docs/dissertation/refs.bib
@@ -168,3 +168,11 @@
   year={2004},
   organization={International Society for Optics and Photonics}
 }
+
+@article{clarke2002reed,
+  title={Reed-Solomon error correction},
+  author={Clarke, CKP},
+  journal={BBC R\&D White Paper, WHP},
+  volume={31},
+  year={2002}
+}
